fix: resolve CORS preflight 404 by properly configuring Spring Security CORS settings